[project]
name = "lactate-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "plotly>=6.5.0",
    "protobuf>=6.33.1",
    "pwlf>=2.5.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
]
